# ResourceInventory

./: .gitignore  README.md  cleanup_docker.sh  docker-compose.yml  env.py  logger.py  main.py  pyproject.toml
api_models/: get_resource.py  type_validator.py
controllers/: model_controller.py  resource_controller.py
scripts/: Base.yang  convert_yang_to_pydantic.py  graph_service.py  mass_data_create.py  useful_graph_queries.txt  yang_to_xml.sh
scripts/input_xml/: Base.xml  Bundle.xml  BundleClusterMapping.xml  CNF.xml  CNFC.xml  Cluster.xml  ClusterRole.xml  ClusterVLAN.xml  Connection.xml  DC.xml  DCPod.xml  Entity.xml  Fabric.xml  GenericEntity.xml  GeoLocation.xml  GeoSubLocation.xml  GeographicArea.xml  IPPool.xml  K8_POD.xml  K8_Service.xml  Location.xml  LogicalInterface.xml  LogicalLink.xml  LogicalResource.xml  ManagedEntity.xml  NELocation.xml  NetworkElement.xml  NetworkService.xml  NetworkSlice.xml  NetworkSliceSubnet.xml  PODInterface.xml  Package.xml  Party.xml  PerfMetricJob.xml  PerfReq.xml  PhysicalLink.xml  RPool.xml  RobinCluster.xml  Role.xml  Router.xml  (+19 more)
scripts/input_yang/: Bundle.yang  BundleClusterMapping.yang  CNF.yang  CNFC.yang  Cluster.yang  ClusterRole.yang  ClusterVLAN.yang  Connection.yang  DC.yang  DCPod.yang  Entity.yang  Fabric.yang  GenericEntity.yang  GeoLocation.yang  GeoSubLocation.yang  GeographicArea.yang  IPPool.yang  K8_POD.yang  K8_Service.yang  Location.yang  LogicalInterface.yang  LogicalLink.yang  LogicalResource.yang  Role.yang  (+34 more)
scriptsActual/: analyze.py  convert.py  nrm3gpp.py  rewrite.py
services/: graph_service.py
(+177 files in other folders)
