[tool.poetry]
name = "resourceinventory"
version = "0.1.0"
description = ""
authors = ["Surender Singh Lamba <sslamba10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
neo4j = "^5.7.0"
fastapi = "^0.95.1"
hypercorn = "^0.14.3"
starlette-exporter = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
